Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51198

[Android] WebView doesn't scale properly when devicePixelRatio greater than 1

    XMLWordPrintable

Details

    • dd99ce27b73923823dc19a4a3273cd8bce5193e3

    Description

      Following the instuctions in http://blog.qt.io/blog/2016/01/26/high-dpi-support-in-qt-5-6/ and enabling HighDPI support the WebView doesn't seem to scale properly when used in StackView at least.

      Use the attached test application to reproduce the issue.

      Attachments

        For Gerrit Dashboard: QTBUG-51198
        # Subject Branch Project Status CR V

        Activity

          People

            stromme Christian
            zhaoyk10 YK
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes